Add GPT-secured controller to the home page

--- a/play-scala-forms-example/app/views/index.scala.html
+++ b/play-scala-forms-example/app/views/index.scala.html
@@ -9,6 +9,9 @@
         <li>
             Secured widgets: <a href="@routes.SecuredWidgetController.listWidgets">@routes.SecuredWidgetController.listWidgets</a>
         </li>
+        <li>
+            GPT-secured widgets: <a href="@routes.GPTSecuredWidgetController.listWidgets">@routes.GPTSecuredWidgetController.listWidgets</a>
+        </li>
     </ul>
 </div>
 }
